@@ -1,6 +1,10 @@
 Apache ManifoldCF Plugin for Elastic Search change Log
 $Id$
 
+======================= Release 2.0.2 =====================
+
+CONNECTORS-1314: Use ":" as mcf user name / mcf domain name separator instead of "@".
+
 ======================= Release 2.0.1 =====================
 
 CONNECTORS-1228: Fix default values so they are correct.
